Grid 2 not finished yet

--- a/basics/grid.html
+++ b/basics/grid.html
@@ -11,9 +11,25 @@
     </head>
     <body>
         <div class="container">
-            <div class="row">
-                <div class="col-lg-6 pink">Column Large 6</div>
-                <div class="col-lg-6 pink">Column Large 6</div>
+            <!--<div class="row">-->
+            <!--    <div class="col-lg-1 col-md-2 pink">Column Large 1</div>-->
+            <!--    <div class="col-lg-1 col-md-2 pink">Column Large 1</div>-->
+            <!--    <div class="col-lg-1 col-md-2 pink">Column Large 1</div>-->
+            <!--    <div class="col-lg-1 col-md-2 pink">Column Large 1</div>-->
+            <!--    <div class="col-lg-1 col-md-2 pink">Column Large 1</div>-->
+            <!--    <div class="col-lg-1 col-md-2 pink">Column Large 1</div>-->
+            <!--    <div class="col-lg-1 col-md-2 pink">Column Large 1</div>-->
+            <!--    <div class="col-lg-1 col-md-2 pink">Column Large 1</div>-->
+            <!--    <div class="col-lg-1 col-md-2 pink">Column Large 1</div>-->
+            <!--    <div class="col-lg-1 col-md-2 pink">Column Large 1</div>-->
+            <!--    <div class="col-lg-1 col-md-2 pink">Column Large 1</div>-->
+            <!--    <div class="col-lg-1 col-md-2 pink">Column Large 1</div>-->
+            <!--</div>-->
+             <div class="row">
+                <div class="col-lg-3 pink">TOUR DATE!</div>
+                <div class="col-lg-3 pink">TOUR DATE!</div>
+                <div class="col-lg-3 pink">TOUR DATE!</div>
+                <div class="col-lg-3 pink">TOUR DATE!</div>
             </div>
         </div>
     </body>
