Boostrap Grid System 2 completed

--- a/basics/grid.html
+++ b/basics/grid.html
@@ -7,6 +7,10 @@
         <style type="text/css">
             .pink{ background-color: pink;
                    border: 1px solid blue;}
+            .orange{ background-color: orange;
+                     border: 1px dashed red;
+                     height: 50px;}
+            }
         </style>
     </head>
     <body>
@@ -26,10 +30,24 @@
             <!--    <div class="col-lg-1 col-md-2 pink">Column Large 1</div>-->
             <!--</div>-->
              <div class="row">
-                <div class="col-lg-3 pink">TOUR DATE!</div>
-                <div class="col-lg-3 pink">TOUR DATE!</div>
-                <div class="col-lg-3 pink">TOUR DATE!</div>
-                <div class="col-lg-3 pink">TOUR DATE!</div>
+                <div class="col-lg-3 col-md-3 col-sm-6 pink">TOUR DATE!
+                    <div class="row">
+                        <div class="col-lg-6 orange">First Half</div>
+                        <div class="col-lg-6 orange">Second Half</div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-3 col-sm-6 pink">TOUR DATE!</div>
+                <div class="col-md-3 col-sm-6 pink">TOUR DATE!</div>
+                <div class="col-md-3 col-sm-6 pink">TOUR DATE!
+                    <div class="row">
+                        <div class="col-lg-2 orange"></div>
+                        <div class="col-lg-2 orange"></div>
+                        <div class="col-lg-2 orange"></div>
+                        <div class="col-lg-2 orange"></div>
+                        <div class="col-lg-2 orange"></div>
+                        <div class="col-lg-2 orange"></div>
+                    </div>
+                </div>
             </div>
         </div>
     </body>
