Bootstrap Grid 1 completed

--- a/basics/navbars.html
+++ b/basics/navbars.html
@@ -17,6 +17,7 @@
                     <a href="#" class="navbar-brand">Fortra</a>
                     </div>
                     <div class="collapse navbar-collapse" id="bs-dev-demo">
+                    <ul class="nav navbar-nav">
                         <li><a href="#">About</a></li>
                         <li><a href="#">Contact</a></li>
                     </ul>
