Boostrap Lading page 2 completed

--- a/basics/index.html
+++ b/basics/index.html
@@ -6,6 +6,7 @@
 
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
         <link rel="stylesheet" href="app.css" type="text/css" />
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
     </head>
     <body>
         
@@ -47,7 +48,7 @@
                     <h1>Puurfect Match</h1>
                     <h3>The only Human-Cat Dating App</h3>
                     <hr>
-                    <button class="btn btn-default btn-lg">Get Started</button>
+                    <button class="btn btn-default btn-lg"><i class="fa fa-anchor"></i> Get Started</button>
                 </div>
                 
             </div>
