--- a/basics/index.html
+++ b/basics/index.html
@@ -33,8 +33,8 @@
       </ul>
       
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Sign-Up</a></li>
-        <li><a href="#">Log-In</a></li>
+        <li><a href="#"><i class="fa fa-user-plus"></i> Sign-Up</a></li>
+        <li><a href="#"><i class="fa fa-sign-in"></i> Log-In</a></li>
         
       </ul>
     </div><!-- /.navbar-collapse -->
